# inventory-manager

./: .gitignore  .replit  Makefile  README.md  pyproject.toml  requirements.txt
src/: config.py  inventory_mongo_client.py  item_cache.py  main.py  responses.py  schemas.py
src/templates/: welcome.html
