[tool]
[tool.poetry]
authors = ["John Kattukudiyil <jskattuk@uwaterloo.ca>"]
description = "Submission for the Fall 2022 Shopify Developer Intern Challenge Question"
name = "Inventory Manager"
version = "1.0.0"
[tool.poetry.dependencies]
python = "^3.8"
Cerberus = "^1.3.4"
Flask = "^2.1.2"
pymongo = {version = "^4.1.1",extras = ["srv"]}
