[tool]
[tool.poetry]
authors = ["John Kattukudiyil <jskattuk@uwaterloo.ca>"]
description = "Application for managing items in an inventory system via HTTP requests, including bulk item creation, deletion, retrieval, updating, and undeletion."
name = "Inventory Manager"
version = "1.0.0"
[tool.poetry.dependencies]
python = "^3.8"
Cerberus = "^1.3.4"
Flask = "^2.1.2"
pymongo = {version = "^4.1.1",extras = ["srv"]}
